fix overflow in drag-item

--- a/app/components/Dustbin/index.less
+++ b/app/components/Dustbin/index.less
@@ -40,9 +40,11 @@
       display: flex;
       flex-wrap: wrap;
       li.drag-item {
-        width: 64px;
-        height: 64px;
         display: flex;
+        min-width: 64px;
+        height: 64px;
+        padding: 10px;
+        box-sizing: border-box;
         margin: 0 10px 10px;
         justify-content: center;
         align-items: center;
